css/styles.css
/* ... */
.social-link:hover,
.social-link:focus {
  background-color: #404bbf;
}
.social-icon {
  fill: #f4f4fd;
}
.worker-name {
  font-weight: 500;
  font-size: 20px;
  line-height: 1.2;
  letter-spacing: 0.02em;
  text-align: center;
}
.worker-position {
  text-align: center;
  color: #434455;
}
/* #endregion */

/* #region Portfolio*/
.portfolio-title {
  font-size: 36px;
  line-height: 1.11;
  letter-spacing: 0.02em;
  text-align: center;
}
.portfolio-wrapper {
}
.portfolio-list {
  display: flex;
  flex-wrap: wrap;
  row-gap: 48px;
  column-gap: 24px;
}
.portfolio-item {
  width: calc((100% - 2 * 24px) / 3);
  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
}
.portfolio-item:hover {
  box-shadow:
    0 2px 1px 0 rgba(46, 47, 66, 0.08),
    0 1px 1px 0 rgba(46, 47, 66, 0.16),
    0 1px 6px 0 rgba(46, 47, 66, 0.08);
}
.portfolio-item:hover .overlay {
  transform: translateY(0);
}
.portfolio-img-wrapper {
  position: relative;
  overflow: hidden;
}
.portfolio-img {
}
.overlay {
  position: absolute;
  display: flex;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  color: #f4f4fd;
  background-color: #4d5ae5;
  padding: 40px 32px;
  transform: translateY(100%);
  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
}
.portfolio-text-wrap {
  display: flex;
  flex-direction: column;
  border: 1px solid #e7e9fc;
  border-top: none;
  padding: 32px 16px;
}
.portfolio-item-name {
  font-weight: 500;
  font-size: 20px;
  line-height: 1.2;
  letter-spacing: 0.02em;
  margin-bottom: 8px;
}
.portfolio-item-field {
  color: #434455;
}

/* #endregion */

/* #region Footer*/
.footer {
  background-color: #2e2f42;
  padding-top: 100px;
  padding-bottom: 100px;
}
.footer-wrap-elements {
  display: flex;
  justify-content: space-between;
  align-items: baseline;
}
.footer-wrapper {
  display: flex;
  flex-direction: column;
  margin-right: 120px;
}
.logo-footer {
  color: #f4f4fd;
  margin-bottom: 16px;
}
.footer-text {
  max-width: 264px;
  color: #f4f4fd;
}
.socials-caption {
  font-weight: 500;
  color: #fff;
  margin-bottom: 16px;
}
.footer-socials-list {
  width: 208px;
  height: 40px;
  display: flex;
  flex-direction: row;
  gap: 16px;
  /* margin-right: 80px; */
}
.footer-socials-link {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 40px;
  height: 40px;
  border-radius: 50%;
  background-color: #4d5ae5;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}
.footer-socials-link:hover,
.footer-socials-link:focus {
  background-color: #31d0aa;
}
.footer-subscribe {
  display: flex;
  flex-direction: column;
}
.footer-form-caption {
  font-weight: 500;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #fff;
  margin-right: auto;
  margin-bottom: 16px;
}
.footer-form {
  display: flex;
  color: #fff;
  gap: 24px;
}
.footer-form-input {
  width: 264px;
  height: 40px;
  font-size: 12px;
  line-height: 2;
  letter-spacing: 0.04em;
  color: #fff;
  background-color: transparent;
  border: 1px solid #fff;
  border-radius: 4px;
  padding: 8px 16px;
  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);

  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}
.footer-form-input:hover,
.footer-form-input:focus {
  outline: none;
  border-color: #31d0aa;
}
.footer-form-input::placeholder {
  color: #fff;
}
.footer-btn {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 16px;
  align-self: flex-end;

  font-weight: 500;
  letter-spacing: 0.04em;
  text-align: center;
  color: #fff;
  background-color: #4d5ae5;
  padding: 8px 24px;
  min-width: 165px;
  height: 40px;
  border-radius: 4px;
  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}
.footer-btn:hover,
.footer-btn:focus {
  background-color: #31d0aa;
}
.subscribe-icon {
  fill: #fff;
}
/* #endregion */

/* #region Modal window */
.modal-overlay {
  background-color: rgba(46, 47, 66, 0.4);

  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 999;

  opacity: 0;
  pointer-events: none;
  visibility: hidden;
  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
  transition-property: opacity, visibility;
}

.modal-overlay.is-open {
  opacity: 1;
  pointer-events: initial;
  visibility: visible;
  transition-delay: 0ms;
}

.modal-window {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -70%);
  opacity: 0;

  width: 408px;
  min-height: 584px;
  padding: 24px;
  padding-top: 72px;
  border-radius: 4px;
  background: #fcfcfc;
  box-shadow:
    0 1px 1px 0 rgba(0, 0, 0, 0.14),
    0 1px 3px 0 rgba(0, 0, 0, 0.12),
    0 2px 1px 0 rgba(0, 0, 0, 0.2);

  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
  transition-property: opacity, transform;
}
.modal-overlay.is-open .modal-window {
  opacity: 1;
  transform: translate(-50%, -50%);
  transition-delay: 250ms;
}
.modal-close-btn {
  position: absolute;
  top: 24px;
  right: 24px;
  width: 24px;
  height: 24px;

  background-color: #e7e9fc;
  border-radius: 50%;
  border: 1px solid rgba(0, 0, 0, 0.1);

  display: flex;
  justify-content: center;
  align-items: center;

  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}
.modal-close-btn:hover,
.modal-close-btn:focus {
  background-color: #404bbf;
}
.close-icon {
  fill: #2e2f42;
  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
}
.modal-close-btn:hover .close-icon,
.modal-close-btn:focus .close-icon {
  fill: #fff;
}
.form-caption {
  width: 360px;
  font-weight: 500;
  color: #2e2f42;
  text-align: center;
  margin-bottom: 16px;
}
.order-form {
}
.form-wrapper:not(:last-child) {
  margin-bottom: 8px;
}
.form-wrapper:last-child {
  margin-bottom: 0;
}
.order-label {
  display: block;
  margin-bottom: 4px;
  font-size: 12px;
  line-height: 1.17;
  letter-spacing: 0.04em;
  color: #8e8f99;
}
.order-field {
  position: relative;
}
/* ... */

